--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -336,17 +336,14 @@
 }
 
 @media (max-width:724px) {
-    .products .all-products {
-        grid-template-columns: 1fr 1fr;
-    }
-
     .all-products .product {
-        min-height: 300px;
+        text-align: center;
+        margin-bottom: 1rem;
     }
 
 
     .all-products .product .image {
-        height: 200px;
+        height: 250px;
     }
 
     .all-products .product .image img {
